Update model parameters to v1.0.2
