# models/009_storage_energy-model-v-1-0-2.js
@@ -3,16 +3,17 @@
 const { INFO, ERROR } = require('../logs');
 const { CATEGORY, DATA_TYPE, VERSION, COLOR } = require('./type')
 const { add_time_interval, get_epoch } = require('./utils')
+const {v102PerGiB} = require("./energy_params/v-1-0-2-perGiB");
 
-const sealing_kW_per_GiB_block_min = '0.00026882';
-const sealing_kW_per_GiB_block_est = '0.00152847';
-const sealing_kW_per_GiB_block_max = '0.00250540';
+const storage_kW_per_GiB_min = v102PerGiB.min.storage_kW_GiB;
+const storage_kW_per_GiB_est = v102PerGiB.estimate.storage_kW_GiB;
+const storage_kW_per_GiB_max = v102PerGiB.max.storage_kW_GiB;
 
-class SealingEnergyModelv_1_0_1 {
+class StorageEnergyModelv_1_0_2 {
     constructor(pool) {
-        this.code_name = 'SealingEnergyModelv_1_0_1';
+        this.code_name = 'StorageEnergyModelv_1_0_2';
         this.pool = pool;
-        this.name = 'Energy used to seal data (v1.0.1)';
+        this.name = 'Energy used to store data (v1.0.2)';
         this.category = CATEGORY.ENERGY; // see type.js
         this.x = DATA_TYPE.TIME;
         this.y = DATA_TYPE.kW;
@@ -32,11 +33,11 @@ class SealingEnergyModelv_1_0_1 {
     }
 
     Details() {
-        return `[Sealing](https://spec.filecoin.io/systems/filecoin_mining/sector/sealing/) is the process of generating SNARK proofs for a data sector which will allow an SP to prove that they are continuing to store that data over time, and is one of the components of energy use of the Filecoin network. Energy use due to sealing is estimated by multiplying the increase in storage capacity over a given time period by a constant value as described in the methodology. Bounds and estimate come from different values of this constant.
+        return `The energy used to store data over time, which is a component of the energy used by the Filecoin network. Storage energy use is estimated by multiplying storage capacity by a constant value. Bounds and estimate come from different values of this constant.
 
-**Network view:** Total electrical power used to seal data for the entire Filecoin network.
+**Network view:** Total electrical power used to store all data on the Filecoin network.
 
-**Storage Provider (SP) view:** Electrical power used by this SP to seal data.
+**Storage Provider (SP) view:** Electrical power used by this SP to store data.
 `;
     }
 
@@ -50,26 +51,26 @@ class SealingEnergyModelv_1_0_1 {
 
         try {
                 result = await this.pool.query(`
-                with sealing as(
+                with storage as(
                     SELECT
-                        ROUND(AVG(cumulative_total_per_day)) AS total_per_day,
+                        ROUND(AVG(cumulative_capacity)) AS total,
                         date_trunc('${params.filter}', date::date) AS start_date
                         FROM (
                             SELECT
                                 date,
-                                SUM(total_per_day) AS cumulative_total_per_day
-                            FROM fil_miners_data_view_country_v8
+                                SUM(total) AS  cumulative_capacity
+                            FROM fil_miners_data_view_country_v9
                             WHERE (date::date >= '${params.start}'::date) AND (date::date <= '${params.end}'::date)
                             GROUP BY date) q1
                         GROUP BY date ORDER BY date ${padding})
 
                     SELECT
                             start_date,
-                            total_per_day * ${sealing_kW_per_GiB_block_min} as \"sealing_energy_kW_lower\" ,
-                            total_per_day * ${sealing_kW_per_GiB_block_est}  as \"sealing_energy_kW_estimate\" ,
-                            total_per_day * ${sealing_kW_per_GiB_block_max}  as \"sealing_energy_kW_upper\" 
-                        FROM sealing
-                        GROUP BY start_date, total_per_day
+                            total * ${storage_kW_per_GiB_min} as \"storage_energy_kW_lower\" ,
+                            total * ${storage_kW_per_GiB_est}  as \"storage_energy_kW_estimate\" ,
+                            total * ${storage_kW_per_GiB_max}  as \"storage_energy_kW_upper\" 
+                        FROM storage
+                        GROUP BY start_date, total
                         ORDER BY start_date
                 ;`);
         } catch (e) {
@@ -89,26 +90,26 @@ class SealingEnergyModelv_1_0_1 {
 
         try {
                 result = await this.pool.query(`
-                with sealing as(
+                with storage as(
                     SELECT
-                        ROUND(AVG(cumulative_total_per_day)) AS total_per_day,
+                        ROUND(AVG(cumulative_capacity)) AS total,
                         date_trunc('${params.filter}', date::date) AS start_date
                         FROM (
                             SELECT
                                 date,
-                                SUM(total_per_day) AS cumulative_total_per_day
-                            FROM fil_miners_data_view_country_v8
+                                SUM(total) AS  cumulative_capacity
+                            FROM fil_miners_data_view_country_v9
                             WHERE (miner in ${params.miners}) AND (date::date >= '${params.start}'::date) AND (date::date <= '${params.end}'::date)
                             GROUP BY date) q1
                         GROUP BY date ORDER BY date ${padding})
 
                     SELECT
                             start_date,
-                            total_per_day * ${sealing_kW_per_GiB_block_min} as \"sealing_energy_kW_lower\" ,
-                            total_per_day * ${sealing_kW_per_GiB_block_est}  as \"sealing_energy_kW_estimate\" ,
-                            total_per_day * ${sealing_kW_per_GiB_block_max}  as \"sealing_energy_kW_upper\" 
-                        FROM sealing
-                        GROUP BY start_date, total_per_day
+                            total * ${storage_kW_per_GiB_min} as \"storage_energy_kW_lower\" ,
+                            total * ${storage_kW_per_GiB_est}  as \"storage_energy_kW_estimate\" ,
+                            total * ${storage_kW_per_GiB_max}  as \"storage_energy_kW_upper\" 
+                        FROM storage
+                        GROUP BY start_date, total
                         ORDER BY start_date
                 ;`);
         } catch (e) {
@@ -128,17 +129,17 @@ class SealingEnergyModelv_1_0_1 {
 
         try {
                 result = await this.pool.query(`
-                with sealing as(
+                with storage as(
                     SELECT
                         country,
-                        ROUND(AVG(cumulative_total_per_day)) AS total_per_day,
+                        ROUND(AVG(cumulative_capacity)) AS total,
                         date_trunc('${params.filter}', date::date) AS start_date
                         FROM (
                             SELECT
-                            country,
+                                country,
                                 date,
-                                SUM(total_per_day) AS cumulative_total_per_day
-                            FROM fil_miners_data_view_country_v8
+                                SUM(total) AS  cumulative_capacity
+                            FROM fil_miners_data_view_country_v9
                             WHERE (country='${params.country}') AND (date::date >= '${params.start}'::date) AND (date::date <= '${params.end}'::date)
                             GROUP BY country, date) q1
                         GROUP BY country, date ORDER BY date ${padding})
@@ -146,11 +147,11 @@ class SealingEnergyModelv_1_0_1 {
                     SELECT
                             country,
                             start_date,
-                            total_per_day * ${sealing_kW_per_GiB_block_min} as \"sealing_energy_kW_lower\" ,
-                            total_per_day * ${sealing_kW_per_GiB_block_est}  as \"sealing_energy_kW_estimate\" ,
-                            total_per_day * ${sealing_kW_per_GiB_block_max}  as \"sealing_energy_kW_upper\" 
-                        FROM sealing
-                        GROUP BY country, start_date, total_per_day
+                            total * ${storage_kW_per_GiB_min} as \"storage_energy_kW_lower\" ,
+                            total * ${storage_kW_per_GiB_est}  as \"storage_energy_kW_estimate\" ,
+                            total * ${storage_kW_per_GiB_max}  as \"storage_energy_kW_upper\" 
+                        FROM storage
+                        GROUP BY country, start_date, total
                         ORDER BY start_date
                 ;`);
         } catch (e) {
@@ -160,7 +161,7 @@ class SealingEnergyModelv_1_0_1 {
         return add_time_interval(params.start, params.end, params.filter, result.rows);
     }
 
-    async VariableSealingEnergy(params) {
+    async VariableStorageEnergy(params) {
         var query_result;
 
         if (params.miners) {
@@ -171,32 +172,32 @@ class SealingEnergyModelv_1_0_1 {
             query_result = await this.NetworkQuery(params);
         }
 
-        let sealingEnergyData_min = [];
-        let sealingEnergyData_est = [];
-        let sealingEnergyData_max = [];
+        let storageEnergyData_min = [];
+        let storageEnergyData_est = [];
+        let storageEnergyData_max = [];
 
         for (const item of query_result ) {
-            sealingEnergyData_min.push({
-                value: item.sealing_energy_kW_lower,
+            storageEnergyData_min.push({
+                value: item.storage_energy_kW_lower,
                 start_date: item.start_date,
                 end_date: item.end_date,
             });
-            sealingEnergyData_est.push({
-                value: item.sealing_energy_kW_estimate,
+            storageEnergyData_est.push({
+                value: item.storage_energy_kW_estimate,
                 start_date: item.start_date,
                 end_date: item.end_date,
             });
-            sealingEnergyData_max.push({
-                value: item.sealing_energy_kW_upper,
+            storageEnergyData_max.push({
+                value: item.storage_energy_kW_upper,
                 start_date: item.start_date,
                 end_date: item.end_date,
             });
         }
 
         return {
-            sealingEnergyData_min: sealingEnergyData_min,
-            sealingEnergyData_est: sealingEnergyData_est,
-            sealingEnergyData_max: sealingEnergyData_max,
+            storageEnergyData_min: storageEnergyData_min,
+            storageEnergyData_est: storageEnergyData_est,
+            storageEnergyData_max: storageEnergyData_max,
         };
     }
 
@@ -217,33 +218,32 @@ class SealingEnergyModelv_1_0_1 {
         }
 
         // Minimum cumulative energy use
-        let sealingEnergyData = await this.VariableSealingEnergy(params);
-        let sealingEnergy_min = {
+        let storageEnergyData = await this.VariableStorageEnergy(params);
+        let storageEnergy_min = {
             title: 'Lower Bound',
             color: COLOR.green,
-            data: sealingEnergyData.sealingEnergyData_min,
+            data: storageEnergyData.storageEnergyData_min,
         }
-        result.data.push(sealingEnergy_min);
+        result.data.push(storageEnergy_min);
 
         // Estimated cumulative energy use
-        let sealingEnergy_est = {
+        let storageEnergy_est = {
             title: 'Estimate',
             color: COLOR.silver,
-            data: sealingEnergyData.sealingEnergyData_est,
+            data: storageEnergyData.storageEnergyData_est,
         }
-        result.data.push(sealingEnergy_est);
+        result.data.push(storageEnergy_est);
 
         // Maximum cumulative energy use
-        let sealingEnergy_max = {
+        let storageEnergy_max = {
             title: 'Upper Bound',
             color: COLOR.orange,
-            data: sealingEnergyData.sealingEnergyData_max,
+            data: storageEnergyData.storageEnergyData_max,
         }
-        result.data.push(sealingEnergy_max);
+        result.data.push(storageEnergy_max);
 
         return result;
     }
-
 
     async Export(id, params) {
         let data = [];
@@ -255,13 +255,13 @@ class SealingEnergyModelv_1_0_1 {
             let query_result;
 
             if (params.miners) {
-                fields = ['sealing_energy_kW_lower', 'sealing_energy_kW_estimate', 'sealing_energy_kW_upper', 'start_date', 'end_date'];
+                fields = ['storage_energy_kW_lower', 'storage_energy_kW_estimate', 'storage_energy_kW_upper', 'start_date', 'end_date'];
                 query_result = await this.MinerQuery(params);
             } else if (params.country) {
-                fields = ['country', 'sealing_energy_kW_lower', 'sealing_energy_kW_estimate', 'sealing_energy_kW_upper', 'start_date', 'end_date'];
+                fields = ['country', 'storage_energy_kW_lower', 'storage_energy_kW_estimate', 'storage_energy_kW_upper', 'start_date', 'end_date'];
                 query_result = await this.CountryQuery(params);
             } else {
-                fields = ['sealing_energy_kW_lower', 'sealing_energy_kW_estimate', 'sealing_energy_kW_upper', 'start_date', 'end_date'];
+                fields = ['storage_energy_kW_lower', 'storage_energy_kW_estimate', 'storage_energy_kW_upper', 'start_date', 'end_date'];
                 query_result = await this.NetworkQuery(params);
             }
 
@@ -269,7 +269,7 @@ class SealingEnergyModelv_1_0_1 {
                 data = query_result;
             }
         } catch (e) {
-            ERROR(`[SealingEnergyModelv_1_0_1] Export error:${e}`);
+            ERROR(`[StorageEnergyModelv_1_0_2] Export error:${e}`);
         }
 
         let exportData = {
@@ -296,9 +296,8 @@ class SealingEnergyModelv_1_0_1 {
 
         return header;
     }
-
 }
 
 module.exports = {
-    SealingEnergyModelv_1_0_1
+    StorageEnergyModelv_1_0_2
 };
